Apply var, record, --enable-preview