@@ -17,6 +17,18 @@ java {
     }
 }
 
+tasks.withType(JavaCompile) {
+    options.compilerArgs += "--enable-preview"
+}
+
+tasks.withType(Test) {
+    jvmArgs += "--enable-preview"
+}
+
+tasks.named('bootRun') {
+    jvmArgs += "--enable-preview"
+}
+
 dependencies {
 
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
